--- a/js/dms.html
+++ b/js/dms.html
@@ -7,21 +7,57 @@
 </head>
 <body>
    <script>
-    var a="ali";
-    var b=200;
-    if(b<a)
-    {
-        document.write("a is greater");
-    }
-    else if(b>a){
-       document.write("b is greater"); 
-    }
-    else if(a==b){
-        document.write("both are equal");
-    }
+    // var a="ali";
+    // var b=200;
+    // if(b<a)
+    // {
+    //     document.write("a is greater");
+    // }
+    // else if(b>a){
+    //    document.write("b is greater"); 
+    // }
+    // else if(a==b){
+    //     document.write("both are equal");
+    // }
 
-    else{
-        document.write("invalid data");
+    // else{
+    //     document.write("invalid data");
+    // }
+
+
+    let day=2654;
+    switch(day){
+        case "monday":{
+            alert("1st day of the week");
+            break;
+        }
+        case "tuesday":{
+            alert("2nd day of the week");
+            break;
+        }
+        case "wednesday":{
+            alert("3rd day of the week");
+            break;
+        }
+        case "thursday":{
+            alert("4th day of the week");
+            break;
+        }
+         case "friday":{
+            alert("5th day of the week");
+            break;
+        }
+        case "saturdey":{
+            alert("6th day of the week");
+            break;
+        }
+        case "sunday":{
+            alert("its weekend");
+            break;
+        }
+        default:{
+            alert("invalid data");
+        }
     }
    </script> 
 </body>
