--- a/js/array.html
+++ b/js/array.html
@@ -19,21 +19,38 @@
 //  student.forEach(i =>{
 //     document.write(i,"<br>");
 //  });
-var arr=[
-    [1,2,3,4,5],
-    [10,20,30,40,50],
-    [100,200,300,400,500]
+// var arr=[
+//     [1,2,3,4,5],
+//     [10,20,30,40,50],
+//     [100,200,300,400,500]
    
     
-];
+// ];
 //document.write(arr[1][2]);
-for(var i=0;i<arr.length;i++)
-{
-   // document.write(arr[i],"<br>");
-   for(var j=0;j<arr[i].length;j++){
-    document.write(arr[i][j],"<br>");
-   }
-}
+// for(var i=0;i<arr.length;i++)
+// {
+//    // document.write(arr[i],"<br>");
+//    for(var j=0;j<arr[i].length;j++){
+//     document.write(arr[i][j],"<br>");
+//    }
+// }
+
+var AI07b=["ali","saad","asad","zain"];
+var AI04b=["ahmed","bilal","hamza"];
+//var myarr=AI04b.concat(AI07b);
+//document.write(myarr)
+//var myarr1=myarr.join("-");
+//document.write(myarr1);
+//var sorted=AI07b.sort();
+//document.write(sorted);
+// AI07b.pop();
+// document.write(AI07b)
+// AI07b.push("salaar");
+// document.write(AI07b)
+AI07b.forEach(e=>{
+    document.write(e+"<br>");
+})
+
 
 
     </script>
