--- a/js/products.html
+++ b/js/products.html
@@ -16,64 +16,35 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        .container{
-            height: auto;
-        }
-        .row
-        {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-        .img{
-            height: 200px;
-        
-        }
-        button{
-            background-color: rgb(175, 180, 180);
-        }
-    </style>
+   
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                <img src="../download (1).jpg" alt="">
-                <h3>product name</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <button>order</button>
-            </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                <img src="../download (1).jpg" alt="">
-                <h3>product name</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <button>order</button>
-            </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                <img src="../download (1).jpg" alt="">
-                <h3>product name</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <button>order</button>
-            </div>
-            </div>
-           <div class="col">
-                <div class="card">
-                <img src="../download (1).jpg" alt="">
-                <h3>product name</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <button>order</button>
-            </div>
-            </div>
-
+        <div class="row" id="showproducts">
+            
         </div>
     </div>
   </body>
+  <script>
+    var col="";
+fetch('products.json')
+      .then(response => response.json())
+      .then(a => {
+        for(var i of a){
+ col+=`<div class="col">
+            <div class="card" style="width: 18rem;">
+  <img src="${i.image}" class="card-img-top" alt="..." height="250px">
+  <div class="card-body">
+    <h5 class="card-title">${i.brand}</h5>
+    <p class="card-text">${i.model}</p>
+     <p class="card-text">${i.description}</p>
+      <p class="card-text">${i.price}</p>
+    <a href="#" class="btn btn-primary">order</a>
+  </div>
+</div>
+</div>`
+        }
+        document.getElementById('showproducts').innerHTML=col;
+
+
+      })
+  </script>
 </html>
