--- a/js/products.html
+++ b/js/products.html
@@ -1,50 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <div class="container">
-        <div class="row" id="showproducts">
+        <div class="row" id="myproducts">
             
         </div>
     </div>
-  </body>
-  <script>
-    var col="";
-fetch('products.json')
+
+    <script>
+        var c="";
+        fetch('products.json')
       .then(response => response.json())
-      .then(a => {
-        for(var i of a){
- col+=`<div class="col">
-            <div class="card" style="width: 18rem;">
-  <img src="${i.image}" class="card-img-top" alt="..." height="250px">
+      .then(i => {
+
+        for(var x of i){
+c+=`<div class="col">
+                =<div class="card" style="width: 18rem;">
+  <img src="${x.image}" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">${i.brand}</h5>
-    <p class="card-text">${i.model}</p>
-     <p class="card-text">${i.description}</p>
-      <p class="card-text">${i.price}</p>
-    <a href="#" class="btn btn-primary">order</a>
+    <h5 class="card-title">${x.brand}</h5>
+    <p class="card-text">${x.model}</p>
+   <p class="card-text">${x.description}</p>
+   <p class="card-text">${x.price}</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
-</div>`
+            </div>`
         }
-        document.getElementById('showproducts').innerHTML=col;
-
-
+        document.getElementById('myproducts').innerHTML=c;
       })
-  </script>
+    </script>
+</body>
+
 </html>
